@@ -1,13 +1,8 @@
 package ca.bc.gov.nrs.vdyp.test;
 
 import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.aMapWithSize;
-import static org.hamcrest.Matchers.equalTo;
-import static org.hamcrest.Matchers.hasKey;
-import static org.hamcrest.Matchers.hasProperty;
-import static org.hamcrest.Matchers.is;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.junit.jupiter.api.Assertions.fail;
+import static org.hamcrest.Matchers.*;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.junit.jupiter.api.Assumptions.assumeTrue;
 
 import java.io.ByteArrayInputStream;
@@ -430,6 +425,10 @@ public class TestUtils {
 				return Path.of(toString(filename));
 			}
 
+			@Override
+			public String toString() {
+				return "Dynamic FileResolver for class " + klazz.getName();
+			}
 		};
 	}
 
@@ -480,7 +479,10 @@ public class TestUtils {
 
 		@Override
 		protected List<ControlKey> outputFileParsers() {
-			return Collections.emptyList();
+			return List.of(
+					ControlKey.VDYP_OUTPUT_VDYP_POLYGON, ControlKey.VDYP_OUTPUT_VDYP_LAYER_BY_SPECIES,
+					ControlKey.VDYP_OUTPUT_VDYP_LAYER_BY_SP0_BY_UTIL
+			);
 		}
 
 		@Override
